# wintakker

./: .gitignore  README.md  default.json  final.ckpt  final.pt  games.db  games.db.est.json  pyproject.toml  t.txt  tak_value_net.ckpt  tak_value_net.pt  tak_weights.json  tmp.ckpt  tmp.pt
examples/: ML_loss_72_quick.txt  ML_loss_96.txt  ML_vs_MINIMAX_d2.txt  ML_vs_MINIMAX_reg_d2.txt  ML_vs_MINIMAX_test  meta.json.bk
scripts/: convert.py  preprocess_dataset.py
src/tak/: __init__.py  ai.py  cli.py  core.py  datasets.py  encoder.py  lr_data.py  lr_weights.py  ml.py  preprocessed_dataset.py  train_ml.py
